--- a/bprdwebsite/static/sample.html
+++ b/bprdwebsite/static/sample.html
@@ -9,12 +9,60 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12 text-center">
-                <h2>Bootstrap Framework</h2>
-            </div>
+            <div class="col-sm-12 bg-danger h1 text-center">Bureau of Police Research and Development</div>
+            <div class="col-sm-12 bg-danger h1 text-center">Ministry of Home affairs</div>
+            <div class="col-sm-2 h2  bg-info bg-gradient"><a href="/static/home.html">Home</a></div>
+            <div class="col-sm-2 h2  bg-info bg-gradient"><a href="/static/about.html">About Us</a></div>
+            <div class="col-sm-2 h2  bg-info bg-gradient"><a href="/static/gallery.html">Gallery</a></div>
+            <div class="col-sm-2 h2  bg-info bg-gradient"><a href="/static/training.html">Training</a></div>
+            <div class="col-sm-2 h2  bg-info bg-gradient"><a href="/static/admin.html">Admin</a></div>
+            <div class="col-sm-2 h2  bg-info bg-gradient"><a href="/static/contactus.html">Contact Us</a></div>
+            <img src="./img/police3.jpg"   style="height:500px;"  alt="police">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th  class="h4 bg-secondary" scope="col">S.No</th>
+                        <th class="h4 bg-secondary" scope="col">About Us</th>
+                    </tr>
+                <tbody>
+                    <tr scope="row">1</tr>
+                    <td class="col-sm-3 h3 bg-success bg-gradient">1</td>
+                    <td class="col-sm-9 h3 bg-success bg-gradient">Evolution of BPRD</td>
+                </tbody>
+                <tbody>
+                    <tr scope="row">2</tr>
+                    <td class=" col-sm-3 h3 bg-success bg-gradient">2</td>
+                    <td class=" col-sm-9 h3 bg-success bg-gradient">Awards/Medals</td>
+                </tbody>
+                <tbody>
+                    <tr scope="row">3</tr>
+                    <td class=" col-sm-3 h3 bg-success bg-gradient">3</td>
+                    <td class=" col-sm-9 h3 bg-success bg-gradient">Organization</td>
+                </tbody>
+            <tbody>
+                <tr scope="row">4</tr>
+                <td class="col-sm-3 h3 bg-success bg-gradient">4</td>
+                <td class="col-sm-9 h3 bg-success g-gradient">Work Allocation</td>
+            </tbody>
+            <tbody>
+                <tr scope="row">5</tr>
+                <td class=" col-sm-3 h3 bg-success bg-gradient">5</td>
+                <td class=" col-sm-9 h3 bg-success bg-gradient">Draft Legislation</td>
+            </tbody>
+            <tbody>
+                <tr scope="row">6</tr>
+                <td class=" col-sm-3 h3 bg-success bg-gradient">6</td>
+                <td class=" col-sm-9 h3 bg-success bg-gradient">Citizen Corner</td>
+            </tbody>
+
+                </thead>
+            </table>
+
         </div>
+      
     </div>
+ 
 </body>
 </html>
